fix overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -67,6 +67,7 @@ body {
    justify-content: space-evenly;
    align-items: center;
    animation: slide-in 20000ms;
+   overflow: hidden;
 
 
    .photositem {
